--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>EstudiantesDB</title>
 
-  <!--  <base href="/"> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -13,14 +13,19 @@
   <meta name="author" content="Rey R">
 
   <!-- Bootstrap Core CSS -->
+  <!-- SUSTITUYE ANGULAR MATERIAL -->
   <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Custom CSS -->
   <link href="./assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
   <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="fix-header card-no-border fix-sidebar">
+<body class="fix-header card-no-border fix-sidebar mat-typography">
 
   <!-- ============================================================== -->
   <!-- Preloader - style you can find in spinners.css -->
@@ -37,10 +42,12 @@
   <!-- ============================================================== -->
   <!-- All Jquery -->
   <!-- ============================================================== -->
+  <!-- SUSTITUYE ANGULAR MATERIAL -->
   <script src="./assets/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap tether Core JavaScript -->
   <script src="./assets/plugins/bootstrap/js/popper.min.js"></script>
   <script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+  
   <!-- slimscrollbar scrollbar JavaScript -->
   <script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
   <!--Wave Effects -->
